adding parts in readme